FullQa New/src/objects/Finance_Operations_Close_Event_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDW_Freeze_Approval_Date__c</fullName>
        <label>EDW Freeze Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Date__c</fullName>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Bookings_Document_Approval_Date__c</fullName>
        <label>Final Bookings Document Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Reconciliation_Approval_Date__c</fullName>
        <label>Final Reconciliation Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Operations_Close_Event__c</fullName>
        <label>Finance Operations Close Event</label>
        <referenceTo>Finance_Operations_Close_Event__c</referenceTo>
        <relationshipLabel>Finance Operations Close Event Milestone</relationshipLabel>
        <relationshipName>Finance_Operations_Close_Event_Milestone</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manual_Additions_Approval_Date__c</fullName>
        <label>Manual Additions Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Enterprise_Bookings__c</fullName>
        <label>New Enterprise Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_MidMarket_Bookings__c</fullName>
        <label>New MidMarket Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_SOHO_Bookings__c</fullName>
        <label>New SOHO Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Enterprise_Bookings__c</fullName>
        <label>Renewal Enterprise Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_MidMarket_Bookings__c</fullName>
        <label>Renewal MidMarket Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_SOHO_Bookings__c</fullName>
        <label>Renewal SOHO Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Bookings_for_Period__c</fullName>
        <label>Total Bookings for Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell_Enterprise_Bookings__c</fullName>
        <label>Upsell Enterprise Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell_MidMarket_Bookings__c</fullName>
        <label>Upsell MidMarket Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell_SOHO_Bookings__c</fullName>
        <label>Upsell SOHO Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Finance Operations Close Event Milestone</label>
    <nameField>
        <label>Finance Operations Close Event Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Operations Close Event Milestone</pluralLabel>
    <recordTypes>
        <fullName>Bookings_Close_Approval</fullName>
        <active>true</active>
        <description>Bookings Close &amp; Approval</description>
        <label>Bookings Close &amp; Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookings_Data_Collection</fullName>
        <active>true</active>
        <description>Bookings Data Collection</description>
        <label>Bookings Data Collection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookings_Delta_Review</fullName>
        <active>true</active>
        <description>Bookings Delta Review</description>
        <label>Bookings Delta Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookings_Exception_Review</fullName>
        <active>true</active>
        <description>Bookings Exception Review</description>
        <label>Bookings Exception Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookings_Reporting</fullName>
        <active>true</active>
        <description>Bookings Reporting</description>
        <label>Bookings Reporting</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>